[package]
name = "git-toolbox"
version = "2.10.1"
edition = "2021"
homepage = "https://github.com/oakcask/git-toolbox"
license = "MIT OR Apache-2.0"

[[bin]]
name = "git-dah"
path = "bin/dah.rs"
required-features = ["git-dah"]

[[bin]]
name = "git-stale"
path = "bin/stale.rs"
required-features = ["git-stale"]

[[bin]]
name = "git-whose"
path = "bin/whose.rs"
required-features = ["git-whose"]

[profile.release]
opt-level = "z"
strip = true
lto = "thin"
codegen-units = 1

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
log = "0.4.29"
once_cell = "1.21.4"
regex = "1.12.3"
thiserror = "2.0.18"
ulid = "1.2.1"
fnmatch-sys = "1.0.0"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.27.0"
url = "2.5.8"

[features]
default = ["git-dah", "git-stale", "git-whose"]
git-dah = []
git-stale = []
git-whose = []

[[bench]]
name = "codeowners"
harness = false
